# tx2_onboard_cam

./: CMakeLists.txt  README.md  package.xml
include/on_board_cam/: gscam.h  gscam_node.h  gscam_nodelet.h  gstCamera.h  utils.h
launch/: bottom.launch
params/: camera.yaml  caminfo.ini
src/: gscam.cpp  gscam_node.cpp  gscam_nodelet.cpp  gstCamera.cpp  utils.cpp
